@@ -5,11 +5,11 @@ on:
   - pull_request
 
 jobs:
-  build:
+  test_linux:
 
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 4
+      max-parallel: 3
       matrix:
         python-version: [3.6, 3.7, 3.8]
 
@@ -42,3 +42,48 @@ jobs:
         pip install pytest
         # uses xvfb for GUI part of the test
         xvfb-run pytest
+
+
+  test_macos:
+
+    runs-on: macos-latest
+    strategy:
+      max-parallel: 3
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - run: mkdir -p dist
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install numpy scipy h5py cython pandas xlrd flake8 pytest ipywidgets IPython matplotlib traitlets pyqt5
+        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable wheel
+        pip install git+https://github.com/pymc-devs/pymc3
+        pip install .
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 --ignore=F401,W504 --count --show-source --statistics --exclude=refnx/_lib/emcee,refnx/reflect/_app/resources_rc.py refnx
+    - name: Test with pytest
+      env:
+        MPLBACKEND: agg
+      run: |
+        pip install pytest
+        pytest
+    - name: make wheel
+      env:
+        MACOSX_DEPLOYMENT_TARGET: 10.9
+      run: |
+        python setup.py bdist_wheel
+
+    - uses: actions/upload-artifact@v1
+      with:
+        name: refnx-wheel
+        path: dist/
